# noozha

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dokploy.yml  index.html  nginx.conf  package.json
public/locales/ar/: common.json  home.json  pricing.json
public/locales/en/: common.json  home.json  pricing.json
public/locales/fr/: common.json  home.json  pricing.json
server/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
server/noozha/: app.py  database.py  logger_config.py  settings.py
server/noozha/api/: constants.py  dependencies.py
server/noozha/api/controllers/: auth.py  reservation.py  stats.py
server/noozha/api/models/: table.py
server/noozha/api/routes/: auth.py  health.py  me.py  reservation.py  stats.py
server/noozha/api/schemas/: auth.py  error.py  reservation.py  shared.py  stats.py
server/noozha/api/utils/: auth.py  pricing.py
server/scripts/: seed.py
src/: App.tsx  vite-env.d.ts
src/components/admin/: Calendar.tsx  LoginForm.tsx  ReservationForm.tsx  ReservationList.tsx
src/components/layout/: Footer.tsx
src/components/sections/: Contact.tsx  Gallery.tsx  Pricing.tsx
src/i18n/: config.ts
src/lib/: api.ts  contact.ts  nocodb.ts
src/pages/: Admin.tsx
src/styles/: global.css
