[project]
name = "noozha"
version = "0.1.0"
description = "Noozha — backend API for the private-pool rental admin panel (Chelles, 77500)."
authors = [
    {name = "Souhib TRABELSI", email = "souhib.t@hotmail.fr"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.2.0",
    "PyJWT>=2.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "ty==0.0.1a21",
    "poethepoet>=0.30.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noozha"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-v --cov=noozha --cov-report=term-missing"

[tool.ruff]
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "A",             # flake8-builtins
    "C4",            # flake8-comprehensions
    "DTZ",           # flake8-datetimez
    "ASYNC",         # flake8-async
    "S",             # flake8-bandit
    "T20",           # flake8-print
    "SIM",           # flake8-simplify
    "RET",           # flake8-return
    "TRY",           # tryceratops
    "LOG", "G",      # flake8-logging
    "TID",           # flake8-tidy-imports
    "ERA",           # eradicate
    "PGH",           # pygrep-hooks
    "PL",            # pylint
    "FAST",          # FastAPI
    "RUF",           # ruff-specific
]
ignore = [
    "FAST001",
    "PLR0913",
    "FURB157",
    "E501",
    "ISC001",
    "TRY003",
    "TRY300",
    "TRY301",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
"noozha/api/routes/*" = ["ARG001", "ARG002"]
"noozha/api/schemas/*" = ["RUF012"]
"noozha/api/models/*" = ["RUF012"]

[tool.ty.src]
exclude = ["tests", "scripts"]

[tool.poe.tasks]
lint = "ruff check ."
format-check = "ruff format --check ."
type-check = "ty check"
check = ["lint", "format-check", "type-check"]

lint-fix = "ruff check --fix ."
format = "ruff format ."
fix = ["format", "lint-fix"]

test = "pytest"
test-fast = "pytest -x"

dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
seed = "python -m scripts.seed"
